# snakeGame

./: CMakeLists.txt  README.md
include/: Food.h  Game.h  Movement.h  Renderer.h  Snake.h
include/enums/: Direction.h
include/struct/: Body.h  Movement.h
src/: Food.cpp  Game.cpp  Renderer.cpp  Snake.cpp  main.cpp
